CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(HTCGR)

ADD_DEFINITIONS(-Wall -pedantic -Wextra)
ADD_DEFINITIONS(-std=c99 -D_POSIX_C_SOURCE=200809L)

ADD_EXECUTABLE(testcg cgroup.c)

ADD_EXECUTABLE(condor_cg_graphite cgroup.c graphite.c main.c)
TARGET_COMPILE_DEFINITIONS(testcg PUBLIC "-D_DBG_CGROUP")

INCLUDE_DIRECTORIES(".")

FIND_LIBRARY(
    LIBCGROUP NAMES libcgroup cgroup
    PATHS /usr/local/ /usr/
)
TARGET_LINK_LIBRARIES( testcg "${LIBCGROUP}" )
TARGET_LINK_LIBRARIES( condor_cg_graphite "${LIBCGROUP}" )
