PROJECT(condor_cgroup_graphite)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

ADD_DEFINITIONS(-Wall -pedantic -Wextra)
ADD_DEFINITIONS(-std=c99 -D_POSIX_C_SOURCE=200809L)

ADD_EXECUTABLE(testcg cgroup.c)
ADD_EXECUTABLE(condor_cg_graphite condor_cg_main.c cgroup.c graphite.c
                                  statsd.c metrics.c util.c)
ADD_CUSTOM_TARGET(condor_cg_statsd ALL COMMAND
	ln -sf condor_cg_graphite condor_cg_statsd
	DEPENDS condor_cg_graphite)
SET_PROPERTY(DIRECTORY APPEND PROPERTY ADDITIONAL_MAKE_CLEAN_FILES condor_cg_statsd )

INCLUDE_DIRECTORIES(".")

FIND_LIBRARY(
    LIBCGROUP NAMES libcgroup cgroup
    PATHS /usr/local/ /usr/
)
TARGET_COMPILE_DEFINITIONS(testcg PUBLIC "-D_DBG_CGROUP")
TARGET_LINK_LIBRARIES( testcg "${LIBCGROUP}" )

TARGET_LINK_LIBRARIES( condor_cg_graphite "${LIBCGROUP}" )

INSTALL(TARGETS condor_cg_graphite DESTINATION libexec/condor)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/condor_cg_statsd DESTINATION libexec/condor)
SET(CMAKE_INSTALL_PREFIX /usr)
STRING (REGEX MATCH "\\.el[1-9]" os_version_suffix ${CMAKE_SYSTEM})

SET(CPACK_GENERATOR "RPM")
SET(CPACK_PACKAGE_NAME "condor-cg-graphite")
SET(CPACK_PACKAGE_VERSION "1.2")
SET(CPACK_PACKAGE_RELEASE 1)
SET(CPACK_RPM_PACKAGE_GROUP "Applications/System")
SET(CPACK_RPM_PACKAGE_ARCHITECTURE "x86_64")
SET(CPACK_RPM_PACKAGE_LICENSE "Apache License 2.0")
SET(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${CPACK_PACKAGE_RELEASE}${os_version_suffix}.${CMAKE_SYSTEM_PROCESSOR}")
SET(CPACK_PACKAGE_VENDOR "RACF")
SET(CPACK_RPM_PACKAGE_DESCRIPTION
"Program for reading stats about running HTCondor jobs on a machine from their
CGroups and publishing this to Graphite.")
SET(CPACK_PACKAGING_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Put condor job metrics into graphite")
SET(CPACK_INCLUDE_TOPLEVEL_DIRECTORY False)
SET(CPACK_RPM_PACKAGE_ARCHITECTURE "x86_64")
SET(CPACK_RPM_USER_BINARY_SPECFILE "${CMAKE_CURRENT_SOURCE_DIR}/rpm/condor-cg-graphite.spec.in")
SET(CPACK_RPM_EXCLUDE_FROM_AUTO_FILELIST_ADDITION "/usr/libexec")
INCLUDE(CPack)

SET(CPACK_RPM_PACKAGE_REQUIRES "condor >= 8.2.0, libcgroup >= 0.37")

